# ekoke

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  canister_ids.json  dfx.json  sns.yml  sns_init.yaml  sns_init_test.yaml
docs/: dao.md  (+4 more)
integration-tests/: Cargo.toml  package.json  parity.json
integration-tests/src/: actor.rs  client.rs  dfx.rs  eth_rpc_client.rs  evm.rs  lib.rs  pocket_ic.rs  wasm.rs
integration-tests/src/abi/: Deferred.json  Ekoke.json  Marketplace.json  RewardPool.json
integration-tests/src/client/: deferred.rs  deferred_data.rs  deferred_minter.rs  ekoke.rs  ekoke_archive.rs  ekoke_index.rs  ekoke_liquidity_pool.rs  ekoke_reward_pool.rs  fly.rs  http.rs  icrc.rs  marketplace.rs  xrc.rs
integration-tests/src/eth_rpc_client/: deferred.rs
integration-tests/src/evm/: abi.rs  builder.rs  evm_rpc_did.rs  ganache.rs
integration-tests/tests/: actor.js  deferred.test.js  helper.rs  integration_tests.rs  sell_contract.test.js
integration-tests/tests/dfx/: create_contract.rs  mod.rs
integration-tests/tests/http/: deferred.rs  ekoke.rs  ekoke_liquidity_pool.rs  mod.rs
integration-tests/tests/inspect/: deferred.rs  ekoke.rs  ekoke_archive.rs  ekoke_erc20_swap.rs  ekoke_index.rs  ekoke_liquidity_pool.rs  ekoke_reward_pool.rs  marketplace.rs  mod.rs
integration-tests/tests/pocket_ic/: get_eth_address.rs  mod.rs
integration-tests/tests/use_case/: buy_marketplace_nft.rs  close_contract.rs  create_contract.rs  get_eth_address.rs  icrc2_spend.rs  increment_contract_value.rs  index_transactions.rs  mod.rs  register_agency.rs  register_contract.rs  register_contract_buyers.rs  register_sell_contract.rs  reserve_reward_pool.rs  update_contract_property.rs  withdraw_contract_deposit.rs  withdraw_liquidity_pool_icp.rs
src/abi/: Cargo.toml
src/abi/src/: lib.rs
src/deferred_data/: Cargo.toml  deferred_data.did
src/deferred_data/src/: app.rs  http.rs  inspect.rs  lib.rs
src/deferred_data/src/app/: configuration.rs  inspect.rs  memory.rs  storage.rs  test_utils.rs
src/deferred_data/src/app/storage/: contracts.rs  documents.rs  real_estate.rs
src/deferred_data/src/http/: contract_filter.rs  real_estate_filter.rs
src/deferred_minter/: Cargo.toml  deferred_minter.did
src/deferred_minter/src/: app.rs  http.rs  inspect.rs  lib.rs  utils.rs
src/deferred_minter/src/abi/: deferred.json  rewardPool.json
src/deferred_minter/src/app/: agents.rs  configuration.rs  contract_id.rs  data_client.rs  ethereum.rs  inspect.rs  memory.rs  reward.rs  roles.rs  test_utils.rs
src/deferred_minter/src/app/ethereum/: deferred.rs  evm_rpc_client.rs  reward_pool.rs  wallet.rs
src/deferred_minter/src/app/ethereum/evm_rpc_client/: evm_rpc_did.rs
src/deferred_minter/src/http/: agents.rs
src/did/: Cargo.toml
src/did/src/: common.rs  deferred.rs  dilazionato.rs  ekoke.rs  ekoke_archive.rs  ekoke_erc20_swap.rs  ekoke_index.rs  ekoke_liquidity_pool.rs  ekoke_reward_pool.rs  fly.rs  lib.rs  marketplace.rs  sell_contract.rs
src/did/src/common/: account.rs  h160.rs  http.rs  id.rs  log_settings.rs  nat.rs  principal.rs
src/did/src/deferred/: agency.rs  canister.rs  contract.rs  data.rs  error.rs  minter.rs  real_estate.rs
src/did/src/deferred/contract/: agency.rs  generic_value.rs  info.rs  token.rs
src/did/src/deferred/data/: error.rs
src/did/src/deferred/minter/: error.rs
src/did/src/ekoke/: error.rs  eth_network.rs  liquidity_pool.rs  role.rs  transaction.rs
src/did/src/ekoke_erc20_swap/: eth_network.rs
src/did/src/ekoke_index/: transaction.rs
src/did/src/ekoke_liquidity_pool/: liquidity_pool.rs
src/did/src/fly/: error.rs  role.rs  transaction.rs
src/dip721/: Cargo.toml
src/dip721/src/: data.rs  lib.rs
src/ekoke_erc20_swap/: Cargo.toml  ekoke-erc20-swap.did
src/ekoke_erc20_swap/src/: abi.rs  app.rs  constants.rs  lib.rs  utils.rs
src/ekoke_erc20_swap/src/app/: configuration.rs  erc20_bridge.rs  inspect.rs  memory.rs  roles.rs
src/ekoke_erc20_swap/src/app/erc20_bridge/: cketh_withdrawal.rs  eth_rpc.rs  eth_wallet.rs  swap_pool.rs
src/ekoke_index/: Cargo.toml  ekoke-index.did
src/ekoke_index/src/: app.rs  inspect.rs  lib.rs  utils.rs
src/ekoke_index/src/app/: archive_client.rs  configuration.rs  index.rs  inspect.rs  memory.rs  test_utils.rs
src/ekoke_liquidity_pool/: Cargo.toml  ekoke-liquidity-pool.did
src/ekoke_liquidity_pool/src/: app.rs  http.rs  inspect.rs  lib.rs  utils.rs
src/ekoke_liquidity_pool/src/app/: configuration.rs  liquidity_pool.rs  memory.rs  refund.rs  test_utils.rs
src/ekoke_reward_pool/: Cargo.toml  ekoke-reward-pool.did
src/ekoke_reward_pool/src/: app.rs  constants.rs  inspect.rs  lib.rs  utils.rs
src/ekoke_reward_pool/src/app/: configuration.rs  inspect.rs  ledger_client.rs  memory.rs  pool.rs  reward.rs  roles.rs  test_utils.rs
src/fly/: Cargo.toml  fly.did
src/fly/src/: abi.rs  app.rs  constants.rs  inspect.rs  lib.rs  utils.rs
src/fly/src/abi/: fly.json
src/fly/src/app/: balance.rs  balances.rs  configuration.rs  erc20_bridge.rs  inspect.rs  liquidity_pool.rs  memory.rs  pool.rs  register.rs  reward.rs  roles.rs  spend_allowance.rs  test_utils.rs
src/fly/src/app/balance/: account.rs  account_balance.rs  balance.rs
src/fly/src/app/erc20_bridge/: eth_rpc.rs  eth_wallet.rs  swap_fee.rs  swap_pool.rs
src/fly/src/app/liquidity_pool/: ckbtc.rs  icp_ledger.rs  xrc.rs
src/fly/src/app/spend_allowance/: key.rs
src/icrc/: Cargo.toml
src/icrc/src/: client.rs  icrc1.rs  icrc2.rs  lib.rs
src/repr/: Cargo.toml
src/repr/src/: main.rs
src/sell-contract/: Cargo.toml
src/sell-contract/src/: app.rs  constants.rs  inspect.rs  lib.rs
src/sell-contract/src/app/: configuration.rs  memory.rs  storage.rs
src/sell-contract/src/app/storage/: tx_history.rs
src/sell-contract/src/client/: fly_client.rs
src/sell_contract/: Cargo.toml  sell_contract.did
src/sell_contract/src/: app.rs  client.rs  inspect.rs  lib.rs  utils.rs
src/sell_contract/src/app/: configuration.rs  storage.rs
src/sell_contract/src/app/storage/: tx_history.rs
src/xrc/: Cargo.toml
src/xrc/src/: lib.rs
(+404 files in other folders)
