[workspace]
members = [
  "integration-tests",
  "src/did",
  "src/dip721",
  "src/deferred",
  "src/fly",
  "src/icrc",
  "src/xrc",
]
resolver = "2"

[workspace.package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
readme = "README.md"
repository = "https://github.com/veeso-dev/deferred"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1.5"
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.5"
ic-stable-structures = "0.6"
ic-xrc-types = "=1.1"
icrc-ledger-types = "0.1"
itertools = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
time = "0.3.28"

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
