[workspace]
members = [
  "src/abi",
  "src/deferred_data",
  "src/deferred_minter",
  "src/did",
  "integration-tests",
]
resolver = "2"

[workspace.package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
readme = "README.md"
repository = "https://github.com/EKOKEtoken/ekoke"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1"
candid = "0.10"
ethers-contract = { version = "2", default-features = false, features = [
  "abigen",
] }
ethers-core = "2"
ethers-signers = "2"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
k256 = { version = "0.13", default-features = false, features = ["ecdsa-core"] }
num-bigint = "0.4"
num-traits = "0.2"
route-recognizer = "0.3"
secp256k1 = "0.30"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2"
time = { version = "0.3.36", features = ["macros", "parsing"] }
url = "2"

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
