[package]
name = "integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
did = { path = "../src/did" }
dip721 = { path = "../src/dip721" }
icrc = { path = "../src/icrc" }
pocket-ic = "2"
serde = { workspace = true }
xrc = { path = "../src/xrc" }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
