[package]
name = "integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
did = { path = "../src/did" }
ethers-core = { workspace = true }
ethers-contract = { workspace = true, features = ["abigen", "providers"] }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ic-log = { workspace = true }
pocket-ic = "6"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
time = { workspace = true }
