[package]
name = "deferred_minter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "deferred_minter_did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
candid = { workspace = true }
did = { path = "../did" }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
