[package]
name = "deferred_minter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "deferred_minter_did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
abi = { path = "../abi" }
candid = { workspace = true }
did = { path = "../did" }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-log = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
route-recognizer = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
