[package]
name = "did"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
candid = { workspace = true }
dip721 = { path = "../dip721" }
ethereum-types = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
num-bigint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
xrc = { path = "../xrc" }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
