[package]
name = "dip721"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
