[package]
name = "ekoke_erc20_swap"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "ekoke-erc20-swap-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
candid = { workspace = true }
did = { path = "../did" }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
ethnum = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
k256 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
xrc = { path = "../xrc" }

[dev-dependencies]
pretty_assertions = "1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
