[package]
name = "ekoke_liquidity_pool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "ekoke-liquidity-pool-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
did = { path = "../did" }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
xrc = { path = "../xrc" }

[dev-dependencies]
pretty_assertions = "1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
