[package]
name = "ekoke_reward_pool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "ekoke-reward-pool-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
candid = { workspace = true }
did = { path = "../did" }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
