[package]
name = "fly"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "fly-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
did = { path = "../did" }
getrandom = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
