[package]
name = "sell_contract"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "sell-contract-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
chrono = { workspace = true }
did = { path = "../did" }
dip721 = { path = "../dip721" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
