[package]
name = "xrc"
description = "EXchange Rate Canister client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-xrc-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
